# dual-tone-generator

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  cog_knob_prototype.html
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SvgDialLookAndFeel.cpp  SvgDialLookAndFeel.h
tests/: TestPluginProcessor.cpp
tools/: svg_editor.html
